--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.1",
     "expo": "~44.0.0",
@@ -22,6 +23,8 @@
     "react-native": "0.64.3",
     "react-native-pager-view": "^5.4.15",
     "react-native-root-toast": "^3.3.0",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^8.0.1",
