--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "axios": "^0.27.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "punycode": "^2.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-pager-view": "^5.4.15",
     "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "^4.2.5",
